--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "jsdom": "^24.0.0",
     "npm-run-all2": "^6.1.1",
     "postcss": "^8.4.35",
+    "postcss-nesting": "^12.0.4",
     "prettier": "^3.0.3",
+    "sass": "^1.71.1",
     "tailwindcss": "^3.4.1",
     "typescript": "~5.3.0",
     "vite": "^5.0.11",
